<resources>
    <string name="app_name">AgricultureAutomationApp</string>

    <!--  Login  -->

    <string name="signin">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="register_question">Register?</string>
    <string name="empty_login_fields">Empty fields</string>
    <string name="invalid_email_format">Invalid email format</string>

    <!--  Environment  -->
    <string name="environments">Environments</string>
    <string name="environment">Environment</string>
    <string name="environment_name">Environment Name</string>
    <string name="raspberry_id">Raspberry Id</string>
    <string name="raspberry_ip">Raspberry IP Address</string>
    <string name="add_environment">Add Environment</string>
    <string name="monitor">Monitor</string>

    <!--  Programs  -->
    <string name="add_program">Add Program</string>
    <string name="select_program">Select Program</string>
    <string name="program_name">Program Name</string>
    <string name="add">Add</string>
    <string name="control">Control</string>
    <string name="agronomical">Agronomical</string>
    <string name="horticultural">Horticultural</string>
    <string name="pomological">Pomological</string>
    <string name="viticultural">Viticultural</string>
    <string name="custom">Custom</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="fan_start_temperature">Fan start temperature</string>
    <string name="fan_start_humidity">Fan start humidity</string>
    <string name="led_start_luminosity">LED start luminosity</string>
    <string name="edit_program">Edit Program</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Air Humidity</string>
    <string name="light">Light Intensity</string>
    <string name="pressure">Air Pressure</string>
    <string name="moisture">Moist Soil</string>
    <string name="sample_number">23</string>
    <string name="control_fan">Control Fan</string>
    <string name="control_pump">Control Pump</string>
    <string name="control_led">Control LED</string>

</resources>